<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:background="@color/white"
    android:layout_height="match_parent">
    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        <LinearLayout
            android:id="@+id/aboutText"
            android:gravity="center"
            android:layout_width="match_parent"
            android:layout_height="450dp"
            android:orientation="vertical"
            >
            <ImageView
                android:id="@+id/app_logo_for_info"
                android:layout_width="100dp"
                android:layout_height="100dp"
                android:layout_gravity="center"
                />
            <TextView
                android:gravity="center"
                android:textSize="13sp"
                android:layout_gravity="center"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/aboutUs"
                />
            <TextView
                android:layout_marginTop="@dimen/marginTop"
                android:layout_marginHorizontal="@dimen/marginLeft"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/informationText"
                />
            <LinearLayout
                android:layout_marginTop="@dimen/marginTop"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:background="@drawable/shadow_effect"
                android:id="@+id/sendEmail"
                android:layout_marginHorizontal="@dimen/marginLeft"
                >
                <ImageView
                    android:layout_marginLeft="10dp"
                    android:layout_width="50dp"
                    android:layout_height="50dp"
                    android:background="@drawable/ic_mail"
                    />
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="50dp"
                    android:gravity="center"
                    android:text="@string/emailAddress"
                    />
            </LinearLayout>
        </LinearLayout>
    </ScrollView>
</RelativeLayout>