<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <data>
        <variable
            name="marketViewModel"
            type="com.onurkanbakirci.aktuelBak.ui.fragments.MarketViewModel" />
    </data>
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        <LinearLayout
            android:id="@+id/inputField"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:orientation="horizontal"
            android:layout_marginTop="10dp"
            android:layout_marginHorizontal="10dp"
            >
            <EditText
                android:id="@+id/inp_text"
                android:cursorVisible="false"
                android:singleLine="true"
                android:layout_gravity="center"
                android:layout_width="match_parent"
                android:layout_weight="1"
                android:layout_height="50dp"
                android:paddingLeft="@dimen/marginLeft"
                android:hint="@string/searchViewQueryHint"
                android:drawablePadding="5dp"
                android:drawableLeft="@drawable/ic_search"
                android:background="@drawable/txt_inp_bck"
                android:padding="10dp"
                android:imeOptions="actionSearch"
                android:textSize="15dp"
                app:onEditorEnterAction="@{marketViewModel.getTextFroInputField}"
                />
        </LinearLayout>
        <androidx.recyclerview.widget.RecyclerView
            android:visibility="@{marketViewModel.searchResultRecycleViewVisibility}"
            android:layout_below="@+id/inputField"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/search_result_recycle_view"
            />
        <LinearLayout
            android:layout_width="match_parent"
            android:gravity="center"
            android:orientation="vertical"
            android:visibility="@{marketViewModel.notFounTextVisibility}"
            android:layout_height="match_parent">
            <ImageView
                android:layout_width="80dp"
                android:layout_height="80dp"
                android:background="@drawable/ic_attention"
                />
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@color/white"
                android:text="@string/notFoundProduct"
                android:textColor="@color/black"
                android:gravity="center"
                />
        </LinearLayout>
        <ProgressBar
            android:indeterminateTint="@color/colorPrimary"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:layout_centerInParent="true"
            android:visibility="@{marketViewModel.waitingProgress}"
            />
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="100dp"
            android:orientation="vertical"
            android:layout_centerInParent="true"
            android:gravity="center"
            android:visibility="@{marketViewModel.search_product_visibility}"
            >
            <ImageView
                android:layout_width="80dp"
                android:layout_height="80dp"
                android:background="@drawable/ic_magnifying_glass"
                />
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="20dp"
                android:textColor="@color/black"
                android:text="@string/input_wished_product_name"
                />
        </LinearLayout>
    </RelativeLayout>
</layout>
